fixed overflow, size and container background

--- a/style.css
+++ b/style.css
@@ -10,16 +10,16 @@ body{
  background: linear-gradient(to top, #eaecc6, #2bc0e4);
 }
 .container{
-  height: 60%;
-  width: 80%;
-  background-color:#daf2f0;
+  height: 80%;
+  width: 90%;
+  background-color:rgba(218, 242, 240, 0.7);
   color: #154d59;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /*opacity: 0.8;*/
+  overflow: scroll;
 }
 .addItems{
   width: 80%;
@@ -150,13 +150,13 @@ li{
 
 @media (min-width:600px){
   .container{
-    height: 60%;
+    height: 80%;
     width: 500px;
   }
 }
 @media (min-width:1000px){
   .container{
-    height: 60%;
-    width: 50%;
+    height: 80%;
+    width: 40%;
   }
 }
